--- a/src/assets/styles/mixins.styl
+++ b/src/assets/styles/mixins.styl
@@ -2,3 +2,10 @@ ellipsis()
   overflow: hidden
   white-space: nowrap
   text-overflow: ellipsis
+// ellipsistwo()
+//      overflow: hidden;
+//      text-overflow: ellipsis;
+//      -webkit-line-clamp:2;
+//      word-break:break-all;
+//      display:-webkit-box;
+//      -webkit-box-orient:vertical;
